--- a/css/main.css
+++ b/css/main.css
@@ -189,15 +189,15 @@ a {
 
 /* Home Section */
 .profile {
-    text-align: center;
+    text-align: ;
     max-width: 800px;
     margin: 0 auto;
 }
 
 .profile-pic {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
+    width: 400px;
+    height: 400px;
+    border-radius: 80%;
     object-fit: cover;
     border: 5px solid var(--primary-color);
     margin-bottom: 20px;
