--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
   --warning-color: #fdcb6e;
   --info-color: #0984e3;
 
-  --transition: none;
+  --transition: none !important;
   --border-radius: 8px;
   --box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
