--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        background-color: rgba(26, 26, 46, 0.9);
+        background-color: var(--darker-color);
         backdrop-filter: blur(10px);
         z-index: 1000;
         padding: 15px 0;
