--- a/css/main.css
+++ b/css/main.css
@@ -1158,7 +1158,7 @@ body.light-theme .social-icon:hover {
 }
 
 .current-section-indicator a.active {
-  background-color: var(--danger-color);
+  background-color: var(--primary-color);
   transform: scale(1.3);
 }
 
