--- a/css/main.css
+++ b/css/main.css
@@ -225,7 +225,7 @@ a {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(5px);
+  backdrop-filter: sepia(90%);
   z-index: 1000;
   opacity: 0;
   visibility: hidden;
@@ -1190,7 +1190,7 @@ body.light-theme .mobile-menu-toggle {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(5px);
+    backdrop-filter: sepia(90%);
     z-index: 999;
   }
 
