--- a/css/main.css
+++ b/css/main.css
@@ -225,6 +225,7 @@ a {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: sepia(90%);
   backdrop-filter: sepia(90%);
   z-index: 1000;
   opacity: 0;
@@ -1195,6 +1196,7 @@ body.light-theme .mobile-menu-toggle {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    -webkit-backdrop-filter: sepia(90%);
     backdrop-filter: sepia(90%);
     z-index: 999;
   }
