--- a/css/main.css
+++ b/css/main.css
@@ -574,12 +574,14 @@ a {
   color: var(--primary-color);
   transition: color 0.3s ease;
   text-align: center;
+  font-family: sans-serif;
 }
 
 .project-content p {
   margin-bottom: 15px;
   color: var(--gray-color);
   font-size: 0.9rem;
+  font-family: sans-serif;
 }
 
 .project-tech {
